# tfo_sensor_selection

./: .gitignore  pyproject.toml  temp.py
data/: dataset_metadata.yaml  description.md  invivo_data.example.csv  sage_output.txt  sequences.yaml
docs/: experiments.md  overview.md  synthetic.md
experiments/: __init__.py  computational_time.py  error_evolution.py  error_evolution_alt.py  invivo_arf_fit.py  invivo_model_training.py  invivo_rfi_greedy.py  mi_evolution.py  pipeline_check.py  sage_sequence.py  simulation_arf_fit.py  simulation_model_trraining.py  simulation_rfi_greedy.py
plotting/: error_evo_plots.py  error_evo_plots2.py  generate_plots.py  load_config.py  plot_config.yaml
results/: computational_time.txt  error_evolution.csv  error_evolution.yaml  error_evolution_alt.csv  invivo_rfi_greedy_results.csv  mi_evolution.yaml  results.csv  simulation_rfi_greedy_results.csv  synthetic_match_metrics.csv
src/tfo_sensor_selection/: __init__.py  config.py
src/tfo_sensor_selection/data/: __init__.py  loader.py  splitter.py  transforms.py
src/tfo_sensor_selection/evaluation/: __init__.py  distribution_match.py  feature_importance.py  synthetic.py
src/tfo_sensor_selection/feature_selection/: __init__.py  rfi_greedy.py
src/tfo_sensor_selection/models/: __init__.py  base.py  neural.py  tree.py
src/tfo_sensor_selection/results/: __init__.py  model_recorder.py  pretrained.py  recorder.py  rfi_recorder.py  synthetic_recorder.py
src/tfo_sensor_selection/synthetic/: __init__.py  arf_generator.py  base.py  conditional.py  factory.py  sdv_gaussian_copula.py
(+3 files in other folders)
